# hometable

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  docker-compose.yml
.github/workflows/: ci.yml  docker-publish.yml  helm-publish.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 389828da4323_add_meals_and_meal_recipes.py  4d7703adcd70_initial_schema.py  e31b140c3687_initial_schema.py
backend/src/hometable/: aggregate.py  config.py  database.py  main.py  models.py  schemas.py  storage.py
backend/src/hometable/routers/: meals.py  recipes.py  tags.py
backend/tests/: conftest.py  test_docs.py  test_meals.py  test_media.py  test_recipes.py
deploy/helm/hometable/: Chart.yaml  values-prod-example.yaml  values.yaml
docs/: agent-add-recipe.md
frontend/: .npmrc  Dockerfile  components.json  default.conf.template  eslint.config.ts  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: index.css  main.tsx  router.tsx
frontend/src/components/: AddRecipePicker.tsx  Layout.tsx  MediaManager.tsx  MediaPlayer.tsx  RecipeCard.tsx  RecipeRow.tsx  ShoppingList.tsx
frontend/src/lib/: api.ts  media.ts  scale.ts  theme.ts
frontend/src/pages/: MealDetailPage.tsx  MealShoppingListPage.tsx  MealsListPage.tsx  RecipeDetailPage.tsx  RecipeEditorPage.tsx  RecipeListPage.tsx
helm/: hometable-0.1.0.tgz  hometable-0.1.1.tgz  hometable-0.1.2.tgz  hometable-0.2.0.tgz  hometable-0.3.0.tgz  hometable-0.3.1.tgz  index.yaml
(+19 files in other folders)
