[project]
name = "hometable"
version = "0.1.0"
description = "Self-hosted home-made recipe menu book — backend API"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "boto3>=1.34",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "ruff>=0.11",
    "pytest>=8.2",
    "httpx>=0.27",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hometable"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
